# convergio-cli

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .env.example  .gitignore  .release-please-manifest.json  .swiftformat  AGENTS.md  ANALISI_REPOSITORY.md  BrutalAssessment22DicCodex.md  BrutalAssessment22DicGemini.md  BrutalEdu-EditionsAssessmentCursor.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONFORMITY_REPORT.md  CONTRIBUTING.md  Cargo.toml  Convergio.code-workspace  EduWebReleasePlanDec28.md  LICENSE  MAKEFILE_OPTIMIZATIONS.md  Makefile  Makefile.optimized  Makefile.test  PRIVACY.md  PRIVACY_POLICY.md  Package.resolved  Package.swift  README.md  RELEASE_PLAN.md  SECURITY.md  SECURITY_AUDIT.md  TERMS_OF_SERVICE.md  TODO-WORKFLOW-ORCHESTRATION.md  V6ReleasePlan.md  annaexecassistantPlan.md  compile_flags.txt  (+3 more)
.build/: plugin-tools.yaml
.claude/agents/: app-release-manager.md  feature-release-manager.md
.claude/commands/: planner.md  test-convergio.md
.claude/prompts/: optimize-plan.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: auto-release.yml  ci.yml  nightly.yml  release.yml  workflow-coverage.yml
ConvergioApp/: ACCESSIBILITY_INTEGRATION.md  ACTION_PLAN.md  DESIGN_SYSTEM_REFACTORING.md  FIXES_APPLIED.md  VOICE_AND_UI_ANALYSIS_REPORT.md  VOICE_FIXES_POST_REBOOT.md  VOICE_IMPLEMENTATION_PLAN.md  project.yml
ConvergioApp/ConvergioApp/: ConvergioApp.entitlements  DesignSystem.swift
ConvergioApp/ConvergioAppTests/: ViewModelTests.swift
ConvergioApp/ConvergioAppUITests/: ConvergioAppUITests.swift  ConversationUITests.swift
ConvergioApp/docs/: HOW_TO_ADD_MAESTRO.md  VOICE_STATUS_2025-12-27.md
ConvergioCore/: Package.swift
Formula/: convergio-biz.rb  convergio-dev.rb  convergio-edu.rb  convergio.rb
Sources/ConvergioAFM/: FoundationModelsBridge.swift
Sources/ConvergioMLX/: MLXBridge.swift
backend/: Dockerfile  README.md  azure-costs  docker-compose.yml  requirements.txt
backend/api/: azure_costs.py  config.py  main.py  models.py
config/: models.json
coverage/: coverage.info
coverage/html/: index.html
crates/convergio-cli/: Cargo.toml
crates/convergio-cli/src/: cli_agent.rs  cli_agent_format.rs  cli_agent_history.rs  cli_agent_tests.rs  cli_agents.rs  cli_api_list.rs  cli_ask.rs  cli_audit.rs  cli_audit_project.rs  cli_audit_tests.rs  cli_build.rs  cli_bus.rs  cli_bus_ask.rs  cli_bus_org.rs  cli_bus_watch.rs  cli_capability.rs  cli_chain.rs  cli_chain_handlers.rs  cli_channel.rs  cli_chat.rs  cli_cheatsheet.rs  cli_checkpoint.rs  cli_cleanup.rs  cli_commands.rs  cli_create_org.rs  cli_delegation.rs  cli_delegation_tests.rs  cli_deploy.rs  cli_doctor.rs  cli_domain.rs  cli_error.rs  cli_http.rs  cli_kb.rs  cli_kernel.rs  cli_launch.rs  cli_lock.rs  cli_memory.rs  cli_mesh_join.rs  cli_newproject.rs  cli_night.rs  (+72 more)
crates/convergio-cli/tests/: api_contract_test.rs  contract_parsers.rs  contract_triangle_test.rs  extension_wiring_test.rs
curricula/it/: elementari.json  iti_commerciale.json  iti_informatica.json  liceo_artistico.json  liceo_classico.json  liceo_linguistico.json  liceo_scientifico.json  scuola_media.json
docs/: ADR-mlx-local-provider.md  ADVANCED_WORKFLOW_ORCHESTRATION.md  AGENT_DEVELOPMENT.md  BrutalEdu-EditionsAssessment.md  CODE_ANALYSIS_REPORT.md  CONTEXT_COMPACTION.md  COST_OPTIMIZATION.md  Convergio6MasterPlan.md  Convergio6Plan.md  DISCLAIMER.md  EduReleasePlanDec22.md  EducationMasterPlan.md  GLOBAL_INTEGRATION.md  GLOBAL_INTEGRATION_STATUS.md  LEGACY_FILES.md  MIGRATION_v3.md  MODEL_SELECTION.md  MULTIMODEL_ROADMAP.md  PROVIDERS.md  RoadmapEditions.md  SECURITY_VERIFICATION.md  Scuola2026.md  TELEMETRY_INTEGRATION_PLAN.md  THREADING.md  TROUBLESHOOTING.md  WEBSITE_MAINTENANCE.md
docs/adr/: 001-extraction.md  001-persistence-layer.md  002-agent-execution-model.md  002-audit-security-fixes.md  003-cost-control-model.md  004-mlx-embeddings.md  005-oauth-authentication.md  006-multi-provider-architecture.md  007-projects-feature.md  008-context-compaction.md  009-anna-executive-assistant.md  010-gnu-readline-prompt-colors.md  011-centralized-plan-database.md  012-output-service.md  013-native-notification-helper.md  014-advanced-filesystem-tools.md  015-web-search-architecture.md  016-convergio-zed-integration.md  018-workflow-orchestration.md  019-coordinated-multi-repo-release.md  ADR-003-edition-system-architecture.md  ADR-003-voice-cli-conversational-ux.md  ADR-004-cli-pure-http-client.md  ADR-007-semantic-graph-persistence.md  (+3 more)
editions/: BUILD.md  README-business.md  README-developer.md  README-education.md  README-master.md  README.md
scripts/: build-edu.sh  check_help_docs.sh  check_v7plan_paths.sh  complexity_check.sh  convergio.sh  embed_agents.sh  ensure_ollama.sh  export-maestri.js  generate_all_agents_settings.sh  generate_convergio_zed_settings.sh  generate_zed_config.sh  pre-commit-hook.sh  pre_release_check.sh  run-native-tests.sh  test-edu.sh
shaders/: similarity.metal
tests/: e2e_conversational_config_test.sh  e2e_education_comprehensive_test.sh  e2e_education_llm_test.sh  e2e_education_test.sh  e2e_full_lesson_mario.sh  e2e_test.sh  education_llm_report.json  education_llm_test.sh  fuzz_test.c  mock_provider.c  mock_provider.h  run_all_tests.sh  test_acp_e2e.sh  test_anna.c  test_apple_foundation.c  test_compaction.c  test_compare.c  test_convergio6_phases.sh  test_conversational_config.c  test_delegation.c  test_edition_separation.c  test_education.c  test_education_safety.c  test_fabric.c  test_group_chat.c  test_output_service.c  test_patterns.c  test_plan_db.c  test_projects.c  test_providers.c  test_router.c  test_security.c  test_stress.c  test_stubs.c  test_task_decomposer.c  test_telemetry.c  test_tools.c  test_unit.c  test_utils.h  test_voice_history.c  (+11 more)
web/: .env.example  BACKEND_IMPLEMENTATION_PLAN.md  README.md  WebAppDec27.md  instrumentation.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  prisma.config.ts  test-ws.mjs
website/: index.html
(+2097 files in other folders)
