[workspace]
resolver = "2"
members = ["crates/convergio-cli"]

[workspace.package]
version = "0.1.5"
edition = "2021"
license = "MIT"
repository = "https://github.com/Roberdan/convergio-cli"

[workspace.dependencies]
# SDK (only types needed)
convergio-sdk = { git = "https://github.com/Roberdan/convergio-sdk", tag = "v0.1.9" }
convergio-types = "0.1"

# Common deps
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "fs", "io-util", "process"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
dialoguer = "0.12"
hostname = "0.4"
toml = "1.1"
hmac = "0.13"
sha2 = "0.11"
hex = "0.4"
url = "2"
futures-util = "0.3"
tracing = "0.1"
