[package]
name = "convergio-cli"
description = "Convergio CLI — command-line interface for all Convergio operations"
version = "0.1.5"
edition.workspace = true
license.workspace = true
repository = "https://github.com/Roberdan/convergio-cli"

[[bin]]
name = "cvg"
path = "src/main.rs"

[dependencies]
convergio-types = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
dialoguer = { workspace = true }
hostname = { workspace = true }
toml = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
url = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
tempfile = "3"
serde_yaml = "0.9"
